--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -35,6 +35,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin:auto;
+  margin-bottom: 20px;
 }
 .btn-option {
   background-color: transparent;
@@ -51,4 +52,20 @@
 }
 .btn-option:hover{
   background-color: #5cbf2a;
+}
+
+.btn-option:active {
+  position: relative;
+  top: 1px;
+}
+.quizz_results{
+  width: 100%;
+  height: 350px;
+  background-color: #1F0539;
+  border-radius: 10px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
