--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,18 +1,18 @@
 <div class="quizz__container">
     <div class="quizz_logo">
       <h1>BuzzFeeD</h1>
-      <h3>Titulo</h3>
+      <h3>{{title}}</h3>
 
     </div>
     <div class="quizz_questions">
-      <h3>Questão Selecionada</h3>
+      <h3>{{questionSelected.question}}</h3>
 
     </div>
     <div class="quizz_options">
-      <button class="btn-option">optionname</button>
+      <button *ngFor = "let option of questionSelected.options ; let i = index" class="btn-option">{{option.name}}</button>
 
     </div>
-    <div class="quizz_results">
+    <div *ngIF= finished class="quizz_results">
       <h1>O seu resultado é:</h1>
       <p>Resposta Selecionada</p>
 
