--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -37,18 +37,24 @@
   margin:auto;
   margin-bottom: 20px;
 }
+.button {
+  display: flex;
+  justify-content: center;
+
+}
 .btn-option {
   background-color: transparent;
   border-radius: 8px;
   border: 1px solid #18ab29;
   width: 50%;
-  display: inline-block;
   cursor: pointer;
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 17px;
   padding: 16px 31px;
   text-shadow: 0px 1px 0px #2f6627;
+  margin-bottom: 40px;
+
 }
 .btn-option:hover{
   background-color: #5cbf2a;
