--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -9,10 +9,12 @@
 
     </div>
     <div class="quizz_options">
-      <button *ngFor = "let option of questionSelected.options ; let i = index" class="btn-option">{{option.name}}</button>
-
     </div>
-    <div *ngIF= finished class="quizz_results">
+    <div class="button">
+      <button class="btn-option">optionname</button>
+    </div>
+
+    <div class="quizz_results">
       <h1>O seu resultado é:</h1>
       <p>Resposta Selecionada</p>
 
